Change title to edit inventory

--- a/markup/product-detail.html
+++ b/markup/product-detail.html
@@ -213,7 +213,7 @@
                           <a href="#" data-target="#select-size-modal" data-toggle="modal"><i class="fa fa-plus color-size-add"></i> Add New</a>
                         </div>
                         <div class="product-size-swatch size-swatch-add right hide size-swatch-hidden">
-                          <a href="#" data-target="#edit-inventory-modal" data-toggle="modal"><i class="fa fa-pencil"></i> Edit</a>
+                          <a href="#" data-target="#edit-inventory-modal" data-toggle="modal"><i class="fa fa-pencil"></i> Edit Inventory</a>
                         </div>
                         <div class="product-size-swatch size-swatch-add right hide size-swatch-hidden">
                           <a href="#"><i class="fa fa-trash-o"></i> Delete</a>
