--- a/markup/product-detail.html
+++ b/markup/product-detail.html
@@ -108,6 +108,14 @@
         </div>
       </div>
     </header>
+    <!-- Save Bar -->
+    <div class="row save-bar hidden">
+      <div class="large-16 columns text-center">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+    <!-- Save Bar -->
 
     <div class="content-wrap">
       <div class="sidebar-primary">
@@ -456,7 +464,6 @@
      </div>
     </div>
     <!-- Add new modal -->
-
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.1/jquery.slimscroll.min.js"></script>
       <script>
